# sdl-anims

./: CMakeLists.txt  README.md  drawpad.c  randwalk.c  spect-vis.c  wrapsdl.h
